Tools: Remove node_modules from build branch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,7 @@ jobs:
 
             - name: Add all the theme files
               run: |
+                rm -rf node_modules
                 git add build --force
 
             - name: Commit and push
