--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,5 +40,6 @@ jobs:
               with:
                   github_token: ${{ secrets.GITHUB_TOKEN }}
                   branch: build
+                  rebase: true
                   force: true
                   message: 'Build CSS: ${{ github.sha }}'
