--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@wordpress/stylelint-config": "23.23.0",
     "autoprefixer": "10.4.21",
+    "cssnano": "^7.1.1",
     "postcss": "8.5.6",
     "postcss-cli": "11.0.1",
     "postcss-import": "16.1.1",
@@ -18,6 +19,7 @@
   "browserslist": "> 1% and not ie <= 11",
   "stylelint": {
     "extends": "@wordpress/stylelint-config",
+    "ignoreFiles": "build/*",
     "rules": {
       "no-descending-specificity": null,
       "selector-class-pattern": null
